Chief Commercial Officer - Chris Dark

--- a/app/views/web/ost/team/_team.erb
+++ b/app/views/web/ost/team/_team.erb
@@ -48,7 +48,7 @@
                             },
                             {
                               name: "Chris Dark",
-                              title: "Chief Commercial Office",
+                              title: "Chief Commercial Officer",
                               image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Chris-Dark.png",
                               linkedIn: 'https://www.linkedin.com/in/chrisdark/',
                               twitter: "https://twitter.com/darky999",
