--- a/app/views/shared/web/common/_index_svg_sprite.erb
+++ b/app/views/shared/web/common/_index_svg_sprite.erb
@@ -233,7 +233,7 @@
       </g>
     </g>
   </symbol>
-  <symbol id="events-mic-icon" viewBox="0 0 15 25">
+  <symbol id="events-podcast-icon" viewBox="0 0 15 25">
     <g fill="none" fill-rule="evenodd">
       <path stroke="#438BAD" stroke-linecap="round" stroke-width="1.737" d="M14 12v2.571C14 18.116 11.084 21 7.5 21S1 18.116 1 14.571V12"/>
       <path fill="#CDD7DA" fill-rule="nonzero" stroke="#CDD7DA" stroke-width=".5" d="M7.575 18c-2.2 0-4-1.739-4-3.864V4.864c0-2.125 1.8-3.864 4-3.864s4 1.739 4 3.864v9.272c0 2.125-1.8 3.864-4 3.864z"/>
