--- a/app/views/web/ost/index/_events_carousel.erb
+++ b/app/views/web/ost/index/_events_carousel.erb
@@ -27,61 +27,5 @@
 </section>
 
 <% content_for :end_js do %>
-<script type="text/javascript">
-  $(function() {
-    ost.carousel.events.init(
-      [
-        {
-          title: "OST LIVE - Partner Interviews: LGBT Foundadtion & Hornet",
-          icon: "events-mic-icon",
-          date: "<em>05</em>Sep",
-        },
-        {
-          title: "Token Engineering Workshop",
-          description: "Berlin Blockchain Week, Berlin",
-          icon: "events-event-icon",
-          date: "<em>06</em>Sep",
-        },
-        {
-          title: "Benjamin Bollen presenting OpenST",
-          description: "ETH Berlin, Berlin",
-          icon: "events-event-icon",
-          date: "<em>07</em>Sep",
-        },
-        {
-          title: "OST LIVE - People of OST: Francis",
-          icon: "events-mic-icon",
-          date: "<em>10</em>Sep",
-        },
-        {
-          title: "OST LIVE",
-          icon: "events-mic-icon",
-          date: "<em>12</em>Sep",
-        },
-        {
-          title: "Benjamin Bollen & Jason Goldberg @UpBit dev conference",
-          description: "Jeju, South Korea",
-          icon: "events-event-icon",
-          date: "<em>13</em>Sep",
-        },
-        {
-          title: "Benjamin Bollen: Origin Protocol & OST",
-          description: "Hashed Lounge, Seoul",
-          icon: "events-event-icon",
-          date: "<em>14</em>Sep",
-        },
-        {
-          title: "OST LIVE - People of OST: Paul Kuveke",
-          icon: "events-mic-icon",
-          date: "<em>17</em>Sep",
-        },
-        {
-          title: "OST LIVE - People of OST: Thomas Power",
-          icon: "events-mic-icon",
-          date: "<em>19</em>Sep",
-        }
-      ]
-    )
-  });
-</script>
+  <script src="https://s3.amazonaws.com/wa.ost.com/ost/docs/ost-upcoming-events-carousel-data.jsonp"> </script>
 <% end %>
