--- a/app/views/web/ost/index/_events_carousel.erb
+++ b/app/views/web/ost/index/_events_carousel.erb
@@ -6,18 +6,20 @@
 
       <script id="event-carousel" type="text/x-handlebars-template">
         <div class="bg-color">
-          <div class="media content-wrapper align-items-center">
-            <span class="dateEl">{{{date}}}</span>
-            <div class="media-body content-body">
-              <div class="heading">{{title}}</div>
-              <p>{{description}}</p>
+          <a href="{{link}}" target="_blank" class="d-block" title="{{event_name}}">
+            <div class="media content-wrapper align-items-center">
+              <span class="dateEl">{{{date}}}</span>
+              <div class="media-body content-body">
+                <div class="heading">{{event_name}}</div>
+                <p>{{description}}</p>
+              </div>
+              <svg width="15" height="20" class="svg-icon">
+                <switch>
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#{{icon}}"></use>
+                </switch>
+              </svg>
             </div>
-            <svg width="15" height="20" class="svg-icon">
-              <switch>
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#{{icon}}"></use>
-              </switch>
-            </svg>
-          </div>
+          </a>
         </div>
       </script>
 
@@ -27,5 +29,71 @@
 </section>
 
 <% content_for :end_js do %>
-  <script src="https://s3.amazonaws.com/wa.ost.com/ost/docs/ost-upcoming-events-carousel-data.jsonp"> </script>
+  <!--<script src="https://s3.amazonaws.com/wa.ost.com/ost/docs/ost-upcoming-events-carousel-data.jsonp"> </script>-->
+  <script type="text/javascript">
+    $(function() {
+      ost.carousel.events.init(
+        [
+          {
+            event_name: "OST LIVE - Partner Interviews: LGBT Foundadtion & Hornet",
+            icon: "events-podcast-icon",
+            date: "<em>05</em>Sep",
+            link: "http://youtube.com/OSTdotcom"
+          },
+          {
+            event_name: "Token Engineering Workshop",
+            description: "Berlin Blockchain Week, Berlin",
+            icon: "events-event-icon",
+            date: "<em>06</em>Sep",
+            link: "https://www.meetup.com/Token-Engineering/events/253174971/"
+          },
+          {
+            event_name: "Benjamin Bollen presenting OpenST",
+            description: "ETH Berlin, Berlin",
+            icon: "events-event-icon",
+            date: "<em>07</em>Sep",
+            link: "https://ethberlin.com/"
+          },
+          {
+            event_name: "OST LIVE - People of OST: Francis",
+            icon: "events-podcast-icon",
+            date: "<em>10</em>Sep",
+            link: "http://youtube.com/OSTdotcom"
+          },
+          {
+            event_name: "OST LIVE",
+            icon: "events-podcast-icon",
+            date: "<em>12</em>Sep",
+            link: "http://youtube.com/OSTdotcom"
+          },
+          {
+            event_name: "Benjamin Bollen & Jason Goldberg @UpBit dev conference",
+            description: "Jeju, South Korea",
+            icon: "events-event-icon",
+            date: "<em>13</em>Sep",
+            link: "https://udc.upbit.com/2018/default.html"
+          },
+          {
+            event_name: "Benjamin Bollen: Origin Protocol & OST",
+            description: "Hashed Lounge, Seoul",
+            icon: "events-event-icon",
+            date: "<em>14</em>Sep",
+            link: "https://www.meetup.com/HashedLounge/events/254366906"
+          },
+          {
+            event_name: "OST LIVE - People of OST: Paul Kuveke",
+            icon: "events-podcast-icon",
+            date: "<em>17</em>Sep",
+            link: "http://youtube.com/OSTdotcom"
+          },
+          {
+            event_name: "OST LIVE - People of OST: Thomas Power",
+            icon: "events-podcast-icon",
+            date: "<em>19</em>Sep",
+            link: "http://youtube.com/OSTdotcom"
+          }
+        ]
+      )
+    });
+  </script>
 <% end %>
