--- a/app/views/web/ost/partners/_partner_companies.erb
+++ b/app/views/web/ost/partners/_partner_companies.erb
@@ -954,12 +954,12 @@
     </div>
 
     <div class="row mt-5" style="overflow: hidden">
-      <% partner_companies.each_with_index do|partner, index| %>
-        <div class="col-6 col-md-3 p-0 category-all size-all visible <%= 'category-'+partner[:categories].join(" category-") %> size-<%= partner[:size] %>">
-          <style>.aspect-ratio-box.hover-<%=index %>:hover {background-color: <%= partner[:on_hover_bgcolor] %>;}</style>
-          <div class="aspect-ratio-box hover-<%=index %>" data-toggle="modal" data-target="#infoModal-<%=index %>" title="<%= partner[:name] %>">
-            <span class="aspect-ratio-box-inside partner-company" style="background-position-y: <%= ((100.00/(partner_companies_count-1))* partner[:sprite_index]).round(2)%>%;" data-toggle="modal" data-target="#infoModal-<%=index %>" data-partner_companies_index="<%=index %>"></span>
-            <% if partner[:has_exited] == true%>
+      <% @partners.each_with_index do|partner, index| %>
+        <div class="col-6 col-md-3 p-0 category-all size-all visible <%= 'category-'+partner['partners_industry'].join(" category-") %> size-<%= partner['partners_size'] %>">
+          <style>.aspect-ratio-box.hover-<%=index %>:hover {background-color: <%= partner['partners_on_hover_bgcolor'] %>;}</style>
+          <div class="aspect-ratio-box hover-<%=index %>" data-toggle="modal" data-target="#infoModal-<%=index %>" title="<%= partner['partners_name'] %>">
+            <span class="aspect-ratio-box-inside partner-company" style="background-position-y: <%= ((100.00/(@partners.length-1))* partner['partners_sprite_index'].to_i).round(2)%>%;" data-toggle="modal" data-target="#infoModal-<%=index %>" data-partner_companies_index="<%=index %>"></span>
+            <% if partner['partners_has_exited'] == true%>
               <div class="position-absolute" style="top: 10px;right: 0;font-size: 0;">
                 <span class="ribbon">PROJECT ENDED</span>
                 <span class="arrow"></span>
@@ -980,67 +980,66 @@
                   <div class="row">
                     <div class="col-12 col-md-9">
                       <div class="mt-3 mb-2">
-                        <span class="details-partner-company" style="background-position-y: <%= ((100.00/(partner_companies_count-1))* partner[:sprite_index]).round(2)%>%;"></span>
+                        <span class="details-partner-company" style="background-position-y: <%= ((100.00/(@partners.length-1))* partner['partners_sprite_index'].to_i).round(2)%>%;"></span>
                       </div>
                       <div class="description">
-                        <%= raw partner[:description_html] %>
+                        <%= raw partner['partners_description'] %>
                       </div>
                     </div>
 
 
                     <div class="col-12 col-md-3 details-style">
-                      <% if partner[:founders]%>
+                      <% if partner['partners_founders']%>
                         <div class="founders mb-3">
                           <h3 class="text-uppercase details mt-2">Founders</h3>
-                          <%  partner[:founders].each_with_index do|founder, index| %>
-                            <div class="name "><%= founder[:name] %></div>
-                            <div class="title mb-2"><%= founder[:title] %></div>
+                          <%  partner['partners_founders'].split(',').each_with_index do|founder, index| %>
+                            <div class="name "><%= founder %></div>
                           <% end %>
                         </div>
                       <% end %>
-                      <% if partner[:location]%>
+                      <% if partner['partners_location']%>
                         <div class="location mb-3">
                           <h3 class="text-uppercase details mt-2">Location</h3>
-                          <div class="address"><%= partner[:location] %></div>
+                          <div class="address"><%= partner['partners_location'] %></div>
                         </div>
                       <% end %>
-                      <% if partner[:categories]%>
+                      <% if partner['partners_industry']%>
                         <div class="industry mb-3">
                           <h3 class="text-uppercase details mt-2">Industry</h3>
-                          <div class="industry-value"><%= partner[:categories].map{ |key| display_labels[key.to_sym] }.join(', ')  %></div>
+                          <div class="industry-value"><%= partner['partners_industry'].map{ |key| display_labels[key.to_sym] }.join(', ')  %></div>
                         </div>
                       <% end %>
-                      <% if partner[:size]%>
+                      <% if partner['partners_size']%>
                         <div class="size mb-3">
                           <h3 class="text-uppercase details mt-2" >Size</h3>
-                          <div class="size-value" ><%=  display_labels[partner[:size].to_sym] %> </div>
+                          <div class="size-value" ><%=  display_labels[partner['partners_size'].to_sym] %> </div>
                         </div>
                       <% end %>
-                      <% if partner[:website]%>
+                      <% if partner['partners_url']%>
                         <div class="website mb-3">
                           <h3 class="text-uppercase details mt-2">Website</h3>
-                          <div class="website-value"><a href="<%= partner[:website] %>" target="_blank"><%= partner[:website] %></a></div>
+                          <div class="website-value"><a href="<%= partner['partners_url'] %>" target="_blank"><%= partner['partners_url'] %></a></div>
                         </div>
                       <% end %>
-                      <% if partner[:social]%>
+                      <% if partner['partners_twitter'] || partner['partners_linkedin'] || partner['partners_medium']  %>
                         <div class="social mb-3">
-                          <%  partner[:social].each_with_index do|social_info, index| %>
-                            <% if social_info[:name] == 'Twitter' %>
-                            <a href="<%= social_info[:link] %>" target="_blank" title="Twitter">
+
+                            <% if partner['partners_twitter'] %>
+                            <a href="<%= partner['partners_twitter'] %>" target="_blank" title="Twitter">
                               <span class="header-social-twitter-icon"></span>
                             </a>
                             <% end %>
-                            <% if social_info[:name] == 'Medium' %>
-                            <a href="<%= social_info[:link] %>" target="_blank" title="Medium">
+                            <% if partner['partners_medium'] %>
+                            <a href="<%= partner['partners_medium'] %>" target="_blank" title="Medium">
                               <span class="header-social-medium-icon"></span>
                             </a>
                             <% end %>
-                            <% if social_info[:name] == 'LinkedIn' %>
-                            <a href="<%= social_info[:link] %>" target="_blank" title="LinkedIn">
+                            <% if partner['partners_linkedin']%>
+                            <a href="<%= partner['partners_linkedin'] %>" target="_blank" title="LinkedIn">
                               <span class="header-social-linkedIn-icon"></span>
                             </a>
                             <% end %>
-                          <% end %>
+
                         </div>
                       <% end %>
                     </div>
